# computer-control-mcp

./: CLAUDE.md  README.md  SCREEN_AUTOMATION.md  dump_screen_elements.py  dump_visible_screen.py  integration.md  linux_feedback.md  publish.ps1  publish.sh  pyproject.toml  run_mcp.py  test_cat1_check.py  test_cat1_screenshots.py  test_cat2_mouse.py  test_cat3_keyboard.py  test_cat4_windows.py  test_cat5_debug.py  test_cat5_discovery.py  test_cat6_actions.py  test_cat6_fix.py  test_cat7_text.py  test_cat8_advanced.py  test_cat9to17.py  test_full_chrome.py  test_full_screenshot.py  test_kill_fix.py  test_linux_quick.py  test_mouse_pos.py  test_ocr_debug.py  test_real_task.py  test_scroll_fixed.py  test_scroll_linux.py  test_scroll_page.py  test_scroll_verify.py  test_scrollbar2.py  test_scrollbar_linux.py
docs/: AGENT_GUIDE.md  ROADMAP.md  screenshot-optimization.md
src/computer_control_mcp/: AGENT_GUIDE.md  accessibility_launcher.py  cli.py  core.py  ui_automation.py
