[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computer-control-mcp-enhanced"
version = "0.4.10"
description = "Enhanced MCP server for computer control: mouse, keyboard, screenshots, OCR, UI automation, region capture, accessibility-aware app launching. Fork of computer-control-mcp with major perception and automation improvements."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "gzmagyari"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]
dependencies = [
    "pyautogui==0.9.54",
    "mcp[cli]==1.13.0",
    "pillow==11.3.0",
    "pygetwindow==0.0.9",
    "pywinctl==0.4.1",
    "fuzzywuzzy==0.18.0",
    "rapidocr>=3.7.0,<4.0.0",
    "onnxruntime==1.22.0",
    "rapidocr_onnxruntime==1.2.3",
    "opencv-python==4.12.0.88",
    "python-Levenshtein>=0.20.9",
    "mss>=7.0.0",
    "windows-capture>=1.0.0; sys_platform=='win32'",
    "uiautomation>=2.0.0; sys_platform=='win32'"
]

[project.urls]
Homepage = "https://github.com/gzmagyari/computer-control-mcp"
Issues = "https://github.com/gzmagyari/computer-control-mcp/issues"
Documentation = "https://github.com/gzmagyari/computer-control-mcp#readme"

[project.scripts]
computer-control-mcp-enhanced = "computer_control_mcp.cli:main"
computer-control-mcp-enhanced-server = "computer_control_mcp.server:main"

[tool.hatch.build]
sources = ["src"]
packages = ["src/computer_control_mcp"]

[tool.hatch.build.targets.wheel]
packages = ["src/computer_control_mcp"]
